# discord-drover-revibecoded-into-cpp

./: .gitignore  CMakeLists.txt  README.md  build-clang.ps1  version.def
src/: common.h  console_installer.cpp  discord_folders.cpp  discord_folders.h  dllmain.cpp  options.cpp  options.h  socket_manager.cpp  socket_manager.h  version_exports.cpp
